--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "author": "Jeremy Valentine",
     "license": "MIT",
     "devDependencies": {
+        "@codemirror/fold": "^0.19.2",
+        "@codemirror/language": "^0.19.7",
+        "@codemirror/rangeset": "^0.19.5",
+        "@codemirror/stream-parser": "https://github.com/lishid/stream-parser",
+        "@codemirror/view": "^0.19.37",
         "@rollup/plugin-commonjs": "^15.1.0",
         "@rollup/plugin-node-resolve": "^9.0.0",
         "@rollup/plugin-typescript": "^6.0.0",
         "@types/node": "^14.14.2",
         "dotenv": "^10.0.0",
         "esbuild": "^0.14.2",
-        "obsidian": "^0.12.17",
+        "obsidian": "^0.13.11",
         "rollup": "^2.32.1",
         "rollup-plugin-css-only": "^3.1.0",
         "standard-version": "^9.3.2",
