--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@codemirror/language": "^0.19.7",
         "@codemirror/rangeset": "^0.19.5",
         "@codemirror/stream-parser": "https://github.com/lishid/stream-parser",
+        "@codemirror/text": "^0.19.5",
         "@codemirror/view": "^0.19.37",
         "@rollup/plugin-commonjs": "^15.1.0",
         "@rollup/plugin-node-resolve": "^9.0.0",
